@@ -5,9 +5,9 @@ import static com.sap.oss.phosphor.fosstars.model.rating.oss.OssRulesOfPlayRatin
 import static com.sap.oss.phosphor.fosstars.model.rating.oss.OssRulesOfPlayRating.OssRulesOfPlayLabel.PASSED_WITH_WARNING;
 import static com.sap.oss.phosphor.fosstars.model.rating.oss.OssRulesOfPlayRating.OssRulesOfPlayLabel.UNCLEAR;
 import static com.sap.oss.phosphor.fosstars.model.score.oss.OssRulesOfPlayScore.SCORE_WITH_WARNING;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.sap.oss.phosphor.fosstars.advice.oss.OssRulesOfPlayAdvisor;
 import com.sap.oss.phosphor.fosstars.model.Confidence;
@@ -28,22 +28,34 @@ import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import org.apache.commons.io.FileUtils;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 public class OssRulesOfPlayMarkdownReporterTest {
 
+  private static int linesWith(String string, String content) throws IOException {
+    BufferedReader reader = new BufferedReader(new StringReader(content));
+
+    String line;
+    int n = 0;
+    while ((line = reader.readLine()) != null) {
+      if (line.contains(string)) {
+        n++;
+      }
+    }
+
+    return n;
+  }
+
   @Test
   public void testReport() throws IOException {
-    Path outputDirectory = Files.createTempDirectory(
-        OssRulesOfPlayMarkdownReporterTest.class.getName());
+    Path outputDirectory =
+        Files.createTempDirectory(OssRulesOfPlayMarkdownReporterTest.class.getName());
     try {
       OssRulesOfPlayRating rating = RatingRepository.INSTANCE.rating(OssRulesOfPlayRating.class);
 
       GitHubProject passedProject = new GitHubProject("org", "passed");
       passedProject.set(
-          new RatingValue(
-              new ScoreValue(rating.score()).set(Score.MAX).confidence(10.0),
-              PASSED));
+          new RatingValue(new ScoreValue(rating.score()).set(Score.MAX).confidence(10.0), PASSED));
 
       GitHubProject projectWithWarnings = new GitHubProject("org", "warnings");
       projectWithWarnings.set(
@@ -56,33 +68,39 @@ public class OssRulesOfPlayMarkdownReporterTest {
       GitHubProject failedProject1 = new GitHubProject("org", "failed1");
       failedProject1.set(
           new RatingValue(
-              new ScoreValue(rating.score(), Score.MIN, Weight.MAX, Confidence.MIN, 
+              new ScoreValue(
+                  rating.score(),
+                  Score.MIN,
+                  Weight.MAX,
+                  Confidence.MIN,
                   Arrays.asList(failedReadme, failedReuse))
-              .set(Score.MIN).confidence(8.0), FAILED));
+                  .set(Score.MIN)
+                  .confidence(8.0),
+              FAILED));
       GitHubProject failedProject2 = new GitHubProject("org2", "failed2");
       failedProject2.set(
           new RatingValue(
-              new ScoreValue(rating.score(), Score.MIN, Weight.MAX, Confidence.MIN, 
-                  Arrays.asList(failedReadme))
-              .set(Score.MIN).confidence(8.0), FAILED));
+              new ScoreValue(
+                  rating.score(), Score.MIN, Weight.MAX, Confidence.MIN, List.of(failedReadme))
+                  .set(Score.MIN)
+                  .confidence(8.0),
+              FAILED));
 
       GitHubProject unclearProject = new GitHubProject("org", "unclear");
       unclearProject.set(
           new RatingValue(
-              new ScoreValue(rating.score()).set(Score.MIN).confidence(Confidence.MIN),
-              UNCLEAR));
+              new ScoreValue(rating.score()).set(Score.MIN).confidence(Confidence.MIN), UNCLEAR));
 
-      List<GitHubProject> projects = Arrays.asList(
-          passedProject, projectWithWarnings, failedProject1, failedProject2, unclearProject
-      );
+      List<GitHubProject> projects =
+          Arrays.asList(
+              passedProject, projectWithWarnings, failedProject1, failedProject2, unclearProject);
 
-      OssRulesOfPlayMarkdownReporter reporter
-          = new OssRulesOfPlayMarkdownReporter(
+      OssRulesOfPlayMarkdownReporter reporter =
+          new OssRulesOfPlayMarkdownReporter(
               outputDirectory.toString(), new OssRulesOfPlayAdvisor());
       reporter.runFor(projects);
 
-      Path reportFileName = 
-          outputDirectory.resolve(OssRulesOfPlayMarkdownReporter.REPORT_FILENAME);
+      Path reportFileName = outputDirectory.resolve(OssRulesOfPlayMarkdownReporter.REPORT_FILENAME);
       assertTrue(Files.exists(reportFileName));
 
       String report = new String(Files.readAllBytes(reportFileName));
@@ -114,19 +132,5 @@ public class OssRulesOfPlayMarkdownReporterTest {
     } finally {
       FileUtils.forceDeleteOnExit(outputDirectory.toFile());
     }
-  }
-
-  private static int linesWith(String string, String content) throws IOException {
-    BufferedReader reader = new BufferedReader(new StringReader(content));
-
-    String line;
-    int n = 0;
-    while ((line = reader.readLine()) != null) {
-      if (line.contains(string)) {
-        n++;
-      }
-    }
-
-    return n;
   }
 }
